Update option into answer